# plasma

./: Cargo.toml  README.md  SECURITY.md  start-test-validator
crates/plasma_state/: Cargo.toml
crates/plasma_state/fuzz/src/: lib.rs
crates/plasma_state/src/: amm.rs  lp.rs
idl/: generateIdlAndClient.js  plasma.json
program/: Cargo.toml
program/src/: autogen_client_structs.rs  lib.rs
program/src/program/: accounts.rs  events.rs  instruction.rs
program/src/program/processor/: initialize.rs  liquidity.rs  swap.rs
program/src/program/validation/: loaders.rs
program/src/program/validation/checkers/: plasma_checkers.rs
sdk/rust/: Cargo.toml
sdk/rust/src/: accounts.rs  amm.rs  errors.rs  events.rs  fixed.rs  instructions.rs  lib.rs  lp.rs
sdk/typescript/tests/: test.ts
