[workspace]
exclude = ["crates/plasma_state/fuzz"]
members = ["program", "crates/*", "sdk/rust"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
borsh = "0.10.0"
bs58 = "0.5.0"
bytemuck = { version = "1.14.3", features = ["derive"] }
ellipsis-macros = "0.1.0"
num_enum = "0.7.2"
plasma-amm-sdk = { version = "0.1.0", path = "sdk/rust" }
plasma-amm-state = { version = "0.1.0", path = "crates/plasma_state" }
shank = "0.3.0"
solana-program = "^1.16"
spl-associated-token-account = { version = "^2.2", features = [
    "no-entrypoint",
] }
spl-token = { version = "3.5", features = ["no-entrypoint"] }
static_assertions = "1.1.0"
thiserror = "1.0.57"
solana-security-txt = "0.1.0"
