[package]
edition = "2021"
name = "plasma"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "plasma"

[features]
autogen-client-structs = []
default = []
no-entrypoint = []

[dependencies]
borsh = { workspace = true }
bs58 = { workspace = true }
bytemuck = { workspace = true }
ellipsis-macros = { workspace = true }
num_enum = { workspace = true }
plasma-amm-state = { workspace = true, features = ["borsh"] }
shank = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
