[package]
edition = "2021"
name = "plasma-amm-state"
version = "0.1.0"
description = "Plasma AMM state"
authors = ["Ellipsis Labs <maintainers@ellipsis.xyz>"]
license = "MIT"
repository = "https://github.com/Ellipsis-Labs/plasma"

[features]
borsh = ["dep:borsh"]

[dependencies]
borsh = { version = "0.10.0", optional = true }
bs58 = { workspace = true }
bytemuck = { workspace = true }
fixed = "1.27.0"

[dev-dependencies]
rand = "0.7.0"
